# myRenderer

./: .gitignore  CMakeLists.txt  README.md  smallpt.cpp
